Update README + bug fix
Fixed a bug in the CSS causing the scrollbar vertical scrollbar to appear at all times.

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,6 +1,6 @@
 /*! csustan-cahsi.main.css (https://hopper.csustan.edu/~cahsi/)
-  * Copyright 2019 - 2021 The Stan-State CAHSI Club (https://github.com/parasiticfrisk/csustanCAHSI/graphs/contributors)
-  * Licensed under MIT (https://github.com/parasiticfrisk/csustanCAHSI/blob/master/LICENSE)*/
+  * Copyright 2019 - 2021 The Stan-State CAHSI Club (https://github.com/4N0NYM0U5MY7H/csustanCAHSI/graphs/contributors)
+  * Licensed under MIT (https://github.com/4N0NYM0U5MY7H/csustanCAHSI/blob/master/LICENSE)*/
 
 /*================================================================================
           GENERAL STYLE & FONT / TEXT 
@@ -10,7 +10,6 @@
 body,
 html {
     overflow-x: hidden;
-    overflow-y: scroll;
 }
 
 a {
@@ -20,6 +19,7 @@ a {
     color: #467fbf;
     text-decoration: none;
 }
+
 a:focus,
 a:hover {
     color: #2f5a89;
@@ -45,6 +45,7 @@ footer .social a {
     line-height: 50px;
     margin: 0 10px;
 }
+
 footer .social a:hover {
     background: #555;
     color: #fff;
@@ -168,7 +169,7 @@ hr {
 .team-member {
     margin-bottom: 40px;
 }
-  
+
 .team-member .image {
     margin-bottom: 1rem;
 }
@@ -179,14 +180,14 @@ hr {
     letter-spacing: 0.1em;
     margin-bottom: 5px;
 }
-  
+
 .team-member p.role {
     font-size: 0.8rem;
     text-transform: uppercase;
     color: #999;
     margin-bottom: 0;
 }
-  
+
 .team-member p {
     color: #999;
     font-size: 0.8rem;
@@ -203,7 +204,7 @@ hr {
     border: 2px solid #fff;
     margin-bottom: 20px;
 }
-  
+
 .icon-outlined .icon-lg {
     font-size: 2rem;
 }
@@ -263,7 +264,7 @@ hr {
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
 }
-  
+
 .box-simple .icon-outlined {
     color: #467fbf;
     border: 1px solid #467fbf;
@@ -275,12 +276,13 @@ hr {
     text-transform: uppercase;
     letter-spacing: 0.1em;
 }
-  
+
 .box-simple p {
     color: #999;
     margin: 20px 0;
     font-size: 0.9rem;
 }
+
 /*================================================================================
           CARD
 ================================================================================*/
@@ -290,11 +292,13 @@ hr {
     border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 0;
 }
-.card > .list-group:first-child .list-group-item:first-child {
+
+.card>.list-group:first-child .list-group-item:first-child {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
 }
-.card > .list-group:last-child .list-group-item:last-child {
+
+.card>.list-group:last-child .list-group-item:last-child {
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
 }
@@ -325,7 +329,7 @@ hr {
 .card-header:first-child {
     border-radius: calc(0 - 1px) calc(0 - 1px) 0 0;
 }
-  
+
 .card-header-transparent {
     background-color: rgba(0, 0, 0, 0.3);
     border-bottom: none;
@@ -344,21 +348,21 @@ hr {
     border-radius: 0;
     border-color: #467fbf;
 }
-  
+
 .card-primary .card-header {
     background: #467fbf;
     color: #fff;
     border: none;
     border-radius: 0;
 }
-  
+
 .card-primary .card-header a {
     color: #fff;
     text-transform: uppercase;
     font-weight: 300;
     letter-spacing: 0.05em;
 }
-  
+
 .card-primary .card-body {
     border-color: #467fbf;
 }
@@ -370,12 +374,14 @@ hr {
 .card-subtitle {
     margin-top: -0.375rem;
 }
+
 /*================================================================================
           FORMS
 ================================================================================*/
 .form-control {
     border-radius: 0;
 }
+
 .form-control:focus {
     border-color: #467fbf;
     -webkit-box-shadow: 0 0 0 0.2rem rgba(79, 191, 168, 0.25);
@@ -392,6 +398,7 @@ input[type="submit"] {
     font-size: 1.3333333333333333em;
     font-weight: 400;
 }
+
 /*================================================================================
           BUTTONS
 ================================================================================*/
@@ -414,12 +421,12 @@ button {
     -webkit-box-shadow: 0 0 0 0.2rem rgba(70, 127, 191, 0.25);
     box-shadow: 0 0 0 0.2rem rgba(70, 127, 191, 0.25);
 }
-  
+
 .btn.disabled,
 .btn:disabled {
     opacity: .65;
 }
-  
+
 .btn:not([disabled]):not(.disabled):active,
 .btn:not([disabled]):not(.disabled).active {
     background-image: none;
@@ -431,37 +438,37 @@ button {
     background-color: #467fbf;
     border-color: #467fbf;
 }
-  
+
 .btn-primary:hover {
     color: color-yiq(#396ca5);
     background-color: #36669c;
     border-color: #36669c;
 }
-  
+
 .btn-primary:focus,
 .btn-primary.focus {
     -webkit-box-shadow: 0 0 0 0.2rem rgba(70, 127, 191, 0.5);
     box-shadow: 0 0 0 0.2rem rgba(70, 127, 191, 0.5);
 }
-  
+
 .btn-primary.disabled,
 .btn-primary:disabled {
     color: color-yiq(#467fbf);
     background-color: #467fbf;
     border-color: #467fbf;
 }
-  
+
 .btn-primary:not(:disabled):not(.disabled):active,
 .btn-primary:not(:disabled):not(.disabled).active,
-.show > .btn-primary.dropdown-toggle {
+.show>.btn-primary.dropdown-toggle {
     color: color-yiq(#36669c);
     background-color: #36669c;
     border-color: #336093;
 }
-  
+
 .btn-primary:not(:disabled):not(.disabled):active:focus,
 .btn-primary:not(:disabled):not(.disabled).active:focus,
-.show > .btn-primary.dropdown-toggle:focus {
+.show>.btn-primary.dropdown-toggle:focus {
     -webkit-box-shadow: 0 0 0 0.2rem rgba(70, 127, 191, 0.5);
     box-shadow: 0 0 0 0.2rem rgba(70, 127, 191, 0.5);
 }
@@ -473,7 +480,7 @@ button {
     border-radius: 0 !important;
     text-decoration: none;
 }
-  
+
 .btn-outlined:hover,
 .btn-outlined:focus {
     background: #467fbf;
@@ -487,7 +494,7 @@ button {
     border-radius: 0 !important;
     text-decoration: none;
 }
-  
+
 .btn-outlined-white:hover,
 .btn-outlined-white:focus {
     background: #fff;
@@ -514,13 +521,14 @@ button {
     line-height: 1.5;
     border-radius: 0;
 }
-  
+
 .btn-sm {
     padding: 0.25rem 0.5rem;
     font-size: 0.7rem;
     line-height: 1.5;
     border-radius: 0;
 }
+
 /*================================================================================
           HEADERS & HEADINGS
 ================================================================================*/
@@ -621,6 +629,7 @@ h5 {
     text-transform: uppercase;
     letter-spacing: 0.1rem;
 }
+
 .heading .text-center h1:after,
 .heading .text-center h2:after,
 .heading .text-center h3:after,
@@ -636,39 +645,40 @@ h5 {
     margin-left: auto;
     margin-right: auto;
 }
+
 /*================================================================================
           NAVIGATION
 ================================================================================*/
 .navbar-light .navbar-brand {
     color: rgba(0, 0, 0, 0.9);
 }
-  
+
 .navbar-light .navbar-brand:focus,
 .navbar-light .navbar-brand:hover {
-color: rgba(0, 0, 0, 0.9);
+    color: rgba(0, 0, 0, 0.9);
 }
 
 .navbar-light .navbar-nav .nav-link {
-color: rgba(0, 0, 0, 0.5);
+    color: rgba(0, 0, 0, 0.5);
 }
 
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
-color: rgba(0, 0, 0, 0.7);
+    color: rgba(0, 0, 0, 0.7);
 }
 
 .navbar-light .navbar-nav .nav-link.disabled {
-color: rgba(0, 0, 0, 0.3);
+    color: rgba(0, 0, 0, 0.3);
 }
 
-.navbar-light .navbar-nav .show > .nav-link,
-.navbar-light .navbar-nav .active > .nav-link,
+.navbar-light .navbar-nav .show>.nav-link,
+.navbar-light .navbar-nav .active>.nav-link,
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .nav-link.active {
-color: rgba(0, 0, 0, 0.9);
+    color: rgba(0, 0, 0, 0.9);
 }
 
 .navbar-light .navbar-toggler {
-color: rgba(0, 0, 0, 0.5);
-border-color: rgba(0, 0, 0, 0.1);
+    color: rgba(0, 0, 0, 0.5);
+    border-color: rgba(0, 0, 0, 0.1);
 }
